# obsidian-clip-api-couchdb

./: .dockerignore  .gitignore  Dockerfile  README.md  config..example.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  logger.py  main.py
app/api/: routes.py
app/services/: couchdb_service.py  image_uploader.py  llm_service.py  markdown_converter.py  notification.py  obsidian_rest_api.py  url_parse_service.py  web_parser.py
app/utils/: __init__.py  debug_manager.py
docker/: docker-compose.deploy.yml
docker/export/: build_and_export.bat  docker-compose.deploy.yml  import_image_template.sh
docs/: architecture.md  index.md  installation.md  quickstart.md
docs/api_ref/: url_crawling_reference.md
docs/cc_history/: 2025-08-25-项目创建文档方式切换到 local rest api 模式.txt
docs/obsidan local rest api/: api_ref.md
tests/: test_markdown_converter.py  test_obsidian_connection.py  test_wecom_notification.py  test_yaml_escape.py
