[project]
name = "obsidian-clip-api"
version = "1.0.0"
description = "Obsidian Web Clipping API Service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "certifi>=2025.0.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.11.6",
    "pyyaml>=6.0.1",
    "aiohttp>=3.9.3",
    "couchdb>=1.2",
    "trafilatura>=1.6.4",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
